# api-movie-library-

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.nginx.yml  docker-compose.yml  movie-api.postman_collection.json  pyproject.toml
app/: api.py  app.py  config.py  login.py  models.py  routes.py
app/models/: __init__.py  country.py  director.py  genre.py  movie.py  through_tables.py  user.py
app/resources/: aggregations.py  api.py  countries.py  directors.py  genres.py  login.py  movies.py  users.py
app/schemas/: countries.py  directors.py  genres.py  movies.py  users.py
app/utils/: admin_required.py  seeds.py
data/: countries.json  directors.json
db/: env.py
db/versions/: 9255dbcb8a36_.py  b89fd6c8f637_add_short_for_countries.py
db_import/: countries.json  genres.json
migrations/: seeds.py
migrations/versions/: 32d78df47db9_data_migration_for_users.py  b89fd6c8f637_add_short_for_countries.py  d4b027c092d9_initial_migration.py
nginx/conf/conf.d/: api-movie.conf
tests/: conftest.py  test_directors_get.py  test_login.py  test_movie_post.py  test_movies_get_api.py
tests/unit/: test_handlers.py
